--- a/cdm_introduction.Rmd
+++ b/cdm_introduction.Rmd
@@ -41,11 +41,11 @@ Various modelling tools have previously been developed to assist in management o
 
 A list of the prior modelling work in the Coorong:
 
--   @bmt2017 . Coorong Options Assessment. Brisbane: BMT WBM Pty Ltd
--   @collier2017 . Optimising Coorong Ruppia habitat: Analysis of management strategies to improve habitat conditions for Ruppia tuberosa in the Coorong (South Australia) based on literature review, manipulative experiments and predictive modelling. Report under review.
--   @mosley2017 . Assessment and modelling of the effects of the 2013-2016 Morella Basin releases on Coorong water quality. Report to the Department of Environment, Water and Natural Resources (DEWNR). University of Adelaide, South Australia.
+-   BMT WBM, 2017. Coorong Options Assessment. Brisbane: BMT WBM Pty Ltd
+-   Collier, C., van Dijk, K., Erftemeijer, P., Foster, N., Hipsey, M., O'Laughlin, E., Ticli, K. and Waycott, M., 2017. Optimising Coorong Ruppia habitat: Analysis of management strategies to improve habitat conditions for *Ruppia tuberosa* in the Coorong (South Australia) based on literature review, manipulative experiments and predictive modelling.
+-   Mosley, L.M., Hamilton, B. Busch, B. Hipsey, M. and and Taylor, B., 2017. Assessment and modelling of the effects of the 2013-2016 Morella Basin releases on Coorong water quality. Report to the Department of Environment, Water and Natural Resources (DEWNR). University of Adelaide, South Australia.
 -   Hipsey, M.R., Busch, B.D., Aldridge, K.T., 2017. Coorong Investigations Project: Ruppia habitat changes in response to augmented South East Flows scenarios and a regulating structure. AED Report \#R39, The University of Western Australia, Perth, Australia. 72pp.
--   Teakle, I., et al. (2021). Coorong Infrastructure Investigations Project: Hydrodynamic, Biogeochemical and Habitat Modelling Study. Brisbane: BMT WBM Pty Ltd.
+-   Teakle, I., et al. 2021. Coorong Infrastructure Investigations Project: Hydrodynamic, Biogeochemical and Habitat Modelling Study. Brisbane: BMT WBM Pty Ltd.
 
 ### Knowledge gaps and development needs
 
