--- a/references/Habitat.bib
+++ b/references/Habitat.bib
@@ -91,7 +91,7 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn3884698 },
 }
 @report{collier2017,
 	title = {Optimising Coorong Ruppia habitat. Stratigies to improve habitat conditions for Ruppia tuberosa in the Coorong (South Australia) based on literature review, manipulative experiments and predictive modelling},
-	author = {Collier, C,and van Dijk, K, and Erftemeijer, P, and Foster, N,and Hipsey, M, and O’Laughlin,and E, Ticli, K and Waycott, M },
+	author = {Collier, C, and van Dijk, K, and Erftemeijer, P, and Foster, N, and Hipsey, M, and O’Laughlin, and E, Ticli, K, and Waycott, M },
 	year = {2017},
 	journal = {},
 	url = {}
