--- a/references/Oxygen.bib
+++ b/references/Oxygen.bib
@@ -47,13 +47,10 @@ volume = {91},
 keywords = {}
 }
 @article{barnes1980,
-	title = {BARNES, R. S. K. 1980. Coastal lagoons. Cambridge Univ. Press, New York. 106 p. {\$}29.50, hardcover; {\$}11.25, softcover.},
+	title = {Coastal lagoons.},
 	author = {{Barnes}, {R.S.K.}},
 	year = {1980},
-	journal = {Limnology and Oceanography},
-	pages = {396--397},
-	volume = {27},
-	number = {2},
+	publisher = {Cambridge Univ. Press, New York},
 	doi = {10.4319/lo.1982.27.2.0396},
 	url = {http://dx.doi.org/10.4319/lo.1982.27.2.0396},
 	langid = {en}
