--- a/references/Sediment.bib
+++ b/references/Sediment.bib
@@ -12,3 +12,15 @@
 	url = {http://dx.doi.org/10.1016/j.envsoft.2014.05.011},
 	langid = {en}
 }
+@Article{hallett2019,
+author ="Hallett, Chris S. and Valesini, Fiona J. and Kilminster, Kieryn and Wells, Naomi S. and Eyre, Bradley D.",
+title  ="A rapid protocol for assessing sediment condition in eutrophic estuaries",
+journal  ="Environ. Sci.: Processes Impacts",
+year  ="2019",
+volume  ="21",
+issue  ="6",
+pages  ="1021-1037",
+publisher  ="The Royal Society of Chemistry",
+doi  ="10.1039/C9EM00141G",
+url  ="http://dx.doi.org/10.1039/C9EM00141G",
+abstract  ="The enrichment of sediments with nutrients and organic matter (eutrophication) is a key anthropogenic stressor of estuaries worldwide{,} impacting their sediment condition{,} ecology and ecosystem service provision. A key challenge for estuary managers and scientists is how to effectively quantify and monitor these changes in ecological condition in a timely and cost-effective manner. We developed a Rapid Assessment Protocol (RAP) for characterizing sediment condition based on the qualitative characteristics of sediment colour{,} odour and texture. We evaluated its utility for assessing sediment condition{,} and particularly the degree and effects of sediment enrichment (as quantified by complementary measurements of total C{,} organic C and total N) across 97 sites throughout a eutrophic microtidal estuary. RAP results were strongly and significantly correlated with the degree of sediment enrichment{,} with RAP scores correctly identifying the assigned enrichment class (low{,} medium{,} high) of 83.5% of sites. More enriched sediments exhibited poorer condition{,} manifested as significantly lower RAP scores for sediment colour{,} texture and odour{,} particularly (but not only) where enrichment coincided with elevated mud content. The RAP was particularly successful (<12% misclassification) at identifying sites with low levels of enrichment{,} indicating its promise as a first-pass survey approach for identifying potential reference or control sites to support impact assessments. RAP approaches based on qualitative sediment characteristics can provide a useful proxy for the degree and impacts of inorganic and organic enrichment{,} with potentially broad applicability for supporting timely{,} cost-effective assessment and monitoring of sediment condition in estuaries worldwide."}
