--- a/references/CDMoverview.bib
+++ b/references/CDMoverview.bib
@@ -19,3 +19,9 @@
 	url = {http://dx.doi.org/10.1029/JC087iC12p09704},
 	langid = {en}
 }
+@report{bmt2019, 
+  year = {2019}, 
+  title = {TUFLOW FV Science Manual. Brisbane, Queensland, Australia: BMTWBM}, 
+  author = {BMTWBM}, 
+  url = {https://downloads.tuflow.com/_archive/TUFLOW_FV/Manual/TUFLOW_FV_User_Manual_2020.pdf}
+}
