update ref style

--- a/references/Habitat.bib
+++ b/references/Habitat.bib
@@ -77,13 +77,12 @@ keywords = {}
 	url = {http://www.goyderinstitute.org/_r3429/media/system/attrib/file/700/TI-2.1.1_TRS_20-13_Aquatic%20Plant%20Synthesis_2020-12-11_Final%20v2.pdf}
 }
 @Book{phillips2006,
-author = { Phillips, Bill. and Muller, Kerri},
-title = { Ecological character of the Coorong, Lakes Alexandrina and Albert Wetland of International Importance / Bill Phillips and Kerri Muller },
+author = { Phillips, B, and Muller, K.},
+title = { Ecological character of the Coorong, Lakes Alexandrina and Albert Wetland of International Importance},
 isbn = { 1921238305 },
 publisher = { Dept. for Environment and Heritage [Adelaide, S. Aust.] },
 pages = { iv, 323 p. : },
 year = { 2006 },
-type = { Book },
 language = { English },
 subjects = { Zoology -- South Australia -- Coorong, The.; Water quality -- South Australia -- Coorong, The.; Wetland ecology -- South Australia -- Coorong, The.; Ecological surveys -- South Australia -- Coorong, The. },
 life-dates = { 2006 -  },
