--- a/references/Oxygen.bib
+++ b/references/Oxygen.bib
@@ -87,7 +87,7 @@ keywords = {}
 
 @article{zhang2011,
 	title = {Effect of Temperature and Salinity on Phosphate Sorption on Marine Sediments},
-	author = {{Zhang}, {Jia-Zhong} and {Huang}, {Xiao-Lan}},
+	author = {{Zhang}, {JiaZhong} and {Huang}, {XiaoLan}},
 	year = {2011},
 	month = {07},
 	date = {2011-07-19},
@@ -158,7 +158,7 @@ keywords = {}
 
 @article{cui2016,
 	title = {The effects of salinity on nitrification using halophilic nitrifiers in a Sequencing Batch Reactor treating hypersaline wastewater},
-	author = {{Cui}, {You-Wei} and {Zhang}, {Hong-Yu} and {Ding}, {Jie-Ran} and {Peng}, {Yong-Zhen}},
+	author = {{Cui}, {YouWei} and {Zhang}, {HongYu} and {Ding}, {JieRan} and {Peng}, {YongZhen}},
 	year = {2016},
 	month = {04},
 	date = {2016-04-25},
