--- a/references/Resuspension.bib
+++ b/references/Resuspension.bib
@@ -98,7 +98,7 @@ author={Julien, Pierre Y.},
 year={2010}}
 
 @article{lee2005,
-author = {Lee, In-Mo and Sung, Sang-Gyu and Cho, Gye-Chun},
+author = {Lee, InMo and Sung, SangGyu and Cho, GyeChun},
 title = {Effect of stress state on the unsaturated shear strength of a weathered granite},
 journal = {Canadian Geotechnical Journal},
 volume = {42},
