--- a/references/Introduction.bib
+++ b/references/Introduction.bib
@@ -1,12 +1,21 @@
-@article{brookes2021, 
-year = {2021}, 
-title = {{Murray-Darling Basin, Australia}}, 
+
+@incollection{brookes2021,
+title = {Chapter 5 - Ecological condition of the Lower Lakes and Coorong},
+editor = {Barry T. Hart and Nick R. Bond and Neil Byron and Carmel A. Pollino and Michael J. Stewardson},
+booktitle = {Murray-Darling Basin, Australia},
+publisher = {Elsevier},
+pages = {95-108},
+year = {2021},
+volume = {1},
+series = {Ecohydrology from Catchment to Coast},
+issn = {25892371},
+doi = {https://doi.org/10.1016/B978-0-12-818152-2.00005-X},
+url = {https://www.sciencedirect.com/science/article/pii/B978012818152200005X},
 author = {Brookes, Justin and Aldridge, Kane and Hipsey, Matthew and Busch, Brendan and Ye, Qifeng and Gibbs, Matt and Paton, David}, 
-doi = {10.1016/b978-0-12-818152-2.00005-x}, 
-abstract = {{The Lower Lakes and Coorong system lies at the terminus of the River Murray and are an icon of the Australian landscape. This system is an incredibly important habitat for waterbirds, supporting more than 1\% of the global populations of nine waterbird taxa and hosting up to 90\% of waterbirds in the Murray-Darling Basin during drought. Modifications to flow have dramatically altered the salinity and water regime in the Coorong, which has impacted the abundance, distribution, and range of the biota in the Coorong. Prudent management and River Murray flows are critical to maintain the ecology of this site into the future. This chapter details the change in hydrology and salinity that has occurred in the Coorong and explores options for contemporary management.}}, 
-pages = {95--108}, 
-keywords = {}
+keywords = {Coorong, River Murray, Salinity, , Salt export},
+abstract = {The Lower Lakes and Coorong system lies at the terminus of the River Murray and are an icon of the Australian landscape. This system is an incredibly important habitat for waterbirds, supporting more than 1% of the global populations of nine waterbird taxa and hosting up to 90% of waterbirds in the Murray–Darling Basin during drought. Modifications to flow have dramatically altered the salinity and water regime in the Coorong, which has impacted the abundance, distribution, and range of the biota in the Coorong. Prudent management and River Murray flows are critical to maintain the ecology of this site into the future. This chapter details the change in hydrology and salinity that has occurred in the Coorong and explores options for contemporary management.}
 }
+
 @article{bice2018, 
 year = {2018}, 
 title = {{Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe). Royal Society of South Australia}}, 
@@ -156,7 +165,7 @@ keywords = {}
 	url = {https://www.researchgate.net/publication/312279815_Monitoring_the_ecological_responses_to_Commonwealth_environmental_water_delivered_to_the_Lower_Murray_River_in_2013-14_Report_2_prepared_for_Commonwealth_Environmental_Water_Office}
 }
 
-@book{gibbs2018,
+@InCollection{gibbs2018,
 	title = {Hydrology and Hydrodynamics of the Lower Lakes, Coorong and Murray Mouth},
 	author = {Gibbs, M,  and Joehnk, K, and Webster, I, and Heneker, T},
 	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
@@ -170,7 +179,7 @@ keywords = {}
 	url = {http://dx.doi.org/10.20851/natural-history-cllmm}
 }
 
-@book{barnett2018,
+@InCollection{barnett2018,
 	title = {Hydrogeology of the Lower Lakes and Coorong Region},
 	author = {Barnett, S},
 	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
